[package]
name = "revelte"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.101.*", features = ["ecma_plugin_transform"] }
# swc_ecma_usage_analyzer = { version = "5.0.0" }
swc_ecma_parser = "0.149.1"
swc_ecma_codegen = "0.155.1"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.


